--- a/Tri-Wpf/Tri-Wpf.csproj
+++ b/Tri-Wpf/Tri-Wpf.csproj
@@ -9,4 +9,10 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Update="Window.Resources.cs">
+        <DependentUpon>Window.Resources.xaml</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
 </Project>
