--- a/Tri-Wpf/Tri-Wpf.csproj
+++ b/Tri-Wpf/Tri-Wpf.csproj
@@ -10,9 +10,25 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Update="Window.Resources.cs">
-        <DependentUpon>Window.Resources.xaml</DependentUpon>
-      </Compile>
+      <Folder Include="ViewModels\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="Views\MainWindow.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="Views\SpacingEdit.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="Resources\Window.Resources.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
     </ItemGroup>
 
 </Project>
