--- a/Tri-Wpf/Tri-Wpf.csproj
+++ b/Tri-Wpf/Tri-Wpf.csproj
@@ -27,4 +27,8 @@
       </Page>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
+    </ItemGroup>
+
 </Project>
