--- a/Tri-Wpf/Tri-Wpf.csproj
+++ b/Tri-Wpf/Tri-Wpf.csproj
@@ -25,6 +25,9 @@
         <XamlRuntime>Wpf</XamlRuntime>
         <SubType>Designer</SubType>
       </Page>
+      <Page Update="Core\Resources\Window.Resources.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </Page>
     </ItemGroup>
 
     <ItemGroup>
