--- a/Tri-Wpf/Tri-Wpf.csproj
+++ b/Tri-Wpf/Tri-Wpf.csproj
@@ -31,6 +31,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
       <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
     </ItemGroup>
 
